Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,21 @@
 </li>
 <li>DI <a href="https://travis-ci.org/CriolloKit/DI"><img src="https://travis-ci.org/CriolloKit/DI.png?branch=master" alt="Build Status"></a>
 </li>
-</ul>
+</ul><p>In order to use CriolloKit you need:</p>
+
+<ol>
+<li>Add CriolloKit pod spec repository</li>
+</ol><p><code>
+pod repo add criollokit https://github.com/CriolloKit/CocoaPodsSpecs.git
+</code></p>
+
+<ol>
+<li>Add 
+<code>
+pod "CriolloKit"
+</code>
+to your project Podfile</li>
+</ol>
         </section>
 
         <aside id="sidebar">
