Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,30 @@
           <h1>
 <a name="criollokit" class="anchor" href="#criollokit"><span class="octicon octicon-link"></span></a>CriolloKit</h1>
 
-<ul>
-<li>Specs <a href="https://travis-ci.org/CriolloKit/CocoaPodsSpecs"><img src="https://travis-ci.org/CriolloKit/CocoaPodsSpecs.png?branch=master" alt="Build Status"></a>
-</li>
-<li>Core <a href="https://travis-ci.org/CriolloKit/Core"><img src="https://travis-ci.org/CriolloKit/Core.png?branch=master" alt="Build Status"></a>
-</li>
-<li>DI <a href="https://travis-ci.org/CriolloKit/DI"><img src="https://travis-ci.org/CriolloKit/DI.png?branch=master" alt="Build Status"></a>
-</li>
-</ul><p>In order to use CriolloKit you need:</p>
+<table>
+<thead><tr>
+<th align="left">Status</th>
+<th align="left">Project</th>
+<th align="left">Description</th>
+</tr></thead>
+<tbody>
+<tr>
+<td align="left"><a href="https://travis-ci.org/CriolloKit/CocoaPodsSpecs"><img src="https://travis-ci.org/CriolloKit/CocoaPodsSpecs.png?branch=master" alt="Build Status"></a></td>
+<td align="left"><a href="https://github.com/CriolloKit/CocoaPodsSpecs">CocoaPodsSpecs</a></td>
+<td align="left">CocoaPods Specs.</td>
+</tr>
+<tr>
+<td align="left"><a href="https://travis-ci.org/CriolloKit/Core"><img src="https://travis-ci.org/CriolloKit/Core.png?branch=master" alt="Build Status"></a></td>
+<td align="left"><a href="https://github.com/CriolloKit/Core">Core</a></td>
+<td align="left">Core.</td>
+</tr>
+<tr>
+<td align="left"><a href="https://travis-ci.org/CriolloKit/DI"><img src="https://travis-ci.org/CriolloKit/DI.png?branch=master" alt="Build Status"></a></td>
+<td align="left"><a href="https://github.com/CriolloKit/DI">Dependency Injection</a></td>
+<td align="left">Dependency Injection.</td>
+</tr>
+</tbody>
+</table><p>In order to use CriolloKit you need:</p>
 
 <ol>
 <li>Add CriolloKit pod spec repository</li>
